# space-pixels-sdl3

./: ASSETS_LICENSES.md  CMakeLists.txt  LICENSE.md  README.md
application/: CMakeLists.txt
application/src/: main.c  settings.h
application/src/common/: assets.c  assets.h  common.h  ui_style.c  ui_style.h
application/src/game/: game_config.c  game_config.h  input.c  input.h
application/src/game/core/: core_common.c  core_common.h  game_context.c  game_context.h  game_engine.c  game_engine.h  game_object.c  game_object.h  object_manager.c  object_manager.h  physics_engine.c  physics_engine.h  scene_manager.c  scene_manager.h
application/src/game/level/: background_layer.c  background_layer.h  enemy_data.c  enemy_data.h  fighter.c  fighter.h  homing_missile.c  homing_missile.h  item.c  item.h  linear_bullet.c  linear_bullet.h  player.c  player.h  template_enemy.c  template_enemy.h  template_object.c  template_object.h
application/src/game/scene/: level_scene.c  level_scene.h  title_scene.c  title_scene.h
application/src/game/scene/level/: level_01.c  level_02.c
application/src/game/ui/: level_end_page.c  level_end_page.h  level_hud.c  level_hud.h  level_pause_page.c  level_pause_page.h  level_stats_page.c  level_stats_page.h  level_ui_manager.c  level_ui_manager.h  title_level_menu.c  title_level_menu.h  title_main_menu.c  title_main_menu.h  title_settings_page.c  title_settings_page.h  title_ui_manager.c  title_ui_manager.h
assets_dev/atlas/: battlecruiser_desc.json  bullets_desc.json  dreadnought_desc.json  fighter_desc.json  frigate_desc.json  health_bar_desc.json  items_desc.json  particles_desc.json  player_desc.json  player_shield_desc.json  scout_desc.json  torpedo_desc.json  ui_base_desc.json
assets_dev/atlas/background/: layer_desc.json
docs/: quick_start_fr.md  sprite_sheet_json_fr.md  ui_guide_fr.md
engine/: CMakeLists.txt
engine/src/: engine.h  engine_common.c  engine_common.h  engine_settings.h
engine/src/core/: asset_manager.c  asset_manager.h  audio_system.c  audio_system.h  camera.c  camera.h  components.c  components.h  gizmos_system.c  gizmos_system.h  graphics_system.c  graphics_system.h  particle_system.c  particle_system.h  sprite_sheet.c  sprite_sheet.h  timer.c  timer.h  viewport.c  viewport.h
engine/src/core/anim/: anim_common.h  basic_anim_state.c  basic_anim_state.h  easing_fct.c  easing_fct.h  sprite_anim.c  sprite_anim.h  sprite_anim_manager.c  sprite_anim_manager.h  sprite_anim_state.c  sprite_anim_state.h
engine/src/ui/: ui_button.c  ui_button.h  ui_fill_rect.c  ui_fill_rect.h  ui_focus_manager.c  ui_focus_manager.h  ui_grid_layout.c  ui_grid_layout.h  ui_image.c  ui_image.h  ui_input.c  ui_input.h  ui_label.c  ui_label.h  ui_list.c  ui_list.h  ui_object.c  ui_object.h  ui_selectable.c  ui_selectable.h  ui_system.c  ui_system.h  ui_utils.c  ui_utils.h
engine/src/utils/: axis_data.c  axis_data.h  colors.h  utils.c  utils.h
